[package]
name = "bt_receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "macro-diagnostics"] }
futures = "0.3"
bytes = "1.0"
dirs = "6.0.0"

[dependencies.windows]
version = "0.52"
features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Rfcomm",
    "Networking_Sockets",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
]
